# DevOps-Deeper-Testing

./: .gitignore  Readme.md  wsl.md
artillery/: Readme.md  first-test.yml  package-lock.json  package.json
e2e-selenium/: .env  Readme.md  pyproject.toml
e2e-selenium/tests/: example_test.py
lighthouse/: Readme.md  package-lock.json  package.json
pact/: README.md  docker-compose-test.yml  docker-compose.yml
pact/reservations/: app.py  dockerfile  reservation.py  test_app.py  test_reservation.py
pact/restaurant/: .env  .env.docker  .env.test  app.py  dockerfile  reservation.py  reservations_client.py  test_reservations_client.py
playwright/: Readme.md  pyproject.toml
zap/: Readme.md  docker-compose.yml  zap.yaml
